syntax = "proto3";

package sdc.biceps;

option java_multiple_files = true;
option java_package = "org.somda.sdc.proto.model.biceps";
option java_outer_classname = "AbstractMetricStateOneOfProto";

import "sdc/biceps/abstractmetricstate.proto";
import "sdc/biceps/realtimesamplearraymetricstate.proto";
import "sdc/biceps/numericmetricstate.proto";
import "sdc/biceps/distributionsamplearraymetricstate.proto";
import "sdc/biceps/stringmetricstateoneof.proto";

message AbstractMetricStateOneOfMsg {
  oneof abstract_metric_state_one_of {
    AbstractMetricStateMsg abstract_metric_state = 1;
    RealTimeSampleArrayMetricStateMsg real_time_sample_array_metric_state = 2;
    NumericMetricStateMsg numeric_metric_state = 3;
    DistributionSampleArrayMetricStateMsg distribution_sample_array_metric_state = 4;
    StringMetricStateOneOfMsg string_metric_state_one_of = 5;
  }
}
