syntax = "proto3";

package sdc.biceps;

option java_multiple_files = true;
option java_package = "org.somda.sdc.proto.model.biceps";
option java_outer_classname = "AlertConditionDescriptorProto";

import "sdc/biceps/abstractalertdescriptor.proto";
import "sdc/biceps/causeinfo.proto";
import "sdc/biceps/alertconditionkind.proto";
import "sdc/biceps/alertconditionpriority.proto";
import "google/protobuf/duration.proto";

message AlertConditionDescriptorMsg {
  AbstractAlertDescriptorMsg abstract_alert_descriptor = 1;
  repeated string source = 2;
  repeated CauseInfoMsg cause_info = 3;
  AlertConditionKindMsg a_kind = 4;
  AlertConditionPriorityMsg a_priority = 5;
  google.protobuf.Duration a_default_condition_generation_delay = 6;
  message CanEscalateMsg {
    enum EnumType {
      LO = 0;
      ME = 1;
      HI = 2;
    }
    EnumType enum_value = 1;
  }
  CanEscalateMsg can_escalate = 7;
  message CanDeescalateMsg {
    enum EnumType {
      ME = 0;
      LO = 1;
      NONE = 2;
    }
    EnumType enum_value = 1;
  }
  CanDeescalateMsg can_deescalate = 8;
}
